# sesiweb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
sesiweb/: __init__.py  webapi.py
sesiweb/model/: service.py
src/: exceptions.py  webapi.py
src/model/: file.py
src/sesiweb/: __init__.py  exceptions.py  webapi.py
src/sesiweb/model/: file.py  service.py
tests/: test_sesiweb.py
